# huginn

./: .cursorrules  .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.config/: mise.toml
.cursor/rules/: rust.mdc  typescript.mdc
.github/workflows/: push.yml
.husky/: pre-commit
apps/collector/: Cargo.toml  package.json  recipe.json
apps/collector/collector_service/: Dockerfile  Dockerfile.dev
apps/collector/collector_service/src/: kick.rs  main.rs
apps/collector/common/src/: error.rs  flaresolverr.rs  kick.rs  lib.rs  proxy.rs  recovery.rs
apps/collector/entity/: Cargo.toml
apps/collector/entity/src/: chatmessage.rs  lib.rs  streamer.rs
apps/collector/migration/: Cargo.toml
apps/collector/migration/src/: lib.rs  m20240320_000001_create_chat_messages_table.rs  m20240321_000001_create_streamers_table.rs  main.rs
apps/collector/monitor_service/: Dockerfile  Dockerfile.dev
apps/collector/monitor_service/src/: error.rs  flaresolverr.rs  main.rs  recovery.rs
apps/collector/src/: config.rs  constants.rs  lib.rs  main.rs
apps/collector/src/models/: mod.rs
apps/collector/src/monitor/: collection.rs
apps/collector/src/utils/: logger.rs
apps/collector/writer_service/: Dockerfile  Dockerfile.dev
apps/collector/writer_service/src/: main.rs
apps/kick/: Dockerfile  README.md  eslint.config.js  package.json  tsconfig.json
apps/kick/src/: index.ts
apps/kick/src/lib/: env.ts  proxy.ts
apps/kick/src/lib/services/: kick.ts
