[package]
name = "collector"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "monitor_service"
path = "monitor_service/src/main.rs"

[[bin]]
name = "collector_service"
path = "collector_service/src/main.rs"

[[bin]]
name = "writer_service"
path = "writer_service/src/main.rs"

[lib]
name = "common"
path = "common/src/lib.rs"

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
slog = "2.7"
slog-envlogger = "2.0"
slog-term = "2.9"
slog-async = "2.7"
config = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
dotenv = "0.15"
tokio = { version = "1.43.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
lapin = "2.0"
redis = { version = "0.29.0", features = ["tokio-comp"] }
thiserror = "2.0.11"
tracing = "0.1"
serde_json = "1.0.138"
tracing-subscriber = "0.3.19"
futures = "0.3.31"
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
reqwest = { version = "0.12.12", features = ["json", "cookies", "http2"] }
uuid = { version = "1.7.0", features = ["v4"] }
sea-orm = { version = "1.1.5", features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    "with-chrono",
    "with-json"
], default-features = false }
sqlx = { version = "=0.6.3", features = ["runtime-tokio-native-tls", "postgres", "chrono"]}
actix-web = "4.4.0"
